--- a/src/scss/_export-components.scss
+++ b/src/scss/_export-components.scss
@@ -11,3 +11,4 @@
 @import './components/publication';
 @import './components/event-modal';
 @import './components/pub-legend';
+@import './components/card';
