--- a/src/views/pages/publications/subpages/pubs.njk
+++ b/src/views/pages/publications/subpages/pubs.njk
@@ -12,17 +12,21 @@
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2021</h4>
     </div>
-    {% for article in pub2021 %}
-      {{ publication(article) }}
-    {% endfor %}
+    <div class="pub-container">
+      {% for article in pub2021 %}
+        {{ publication(article) }}
+      {% endfor %}
+    </div>
   </section>
   <section class="py-4">
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2020</h4>
     </div>
+    <div class="pub-container">
     {% for article in pub2020 %}
       {{ publication(article) }}
     {% endfor %}
+    </div>
   </section>
 </article>
 
@@ -31,18 +35,22 @@
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2019</h4>
     </div>
+    <div class="pub-container">
     {% for article in pub2019 %}
       {{ publication(article) }}
     {% endfor %}
+    </div>
   </section>
 
   <section class="py-4">
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2018</h4>
     </div>
+    <div class="pub-container">
     {% for article in pub2018 %}
       {{ publication(article) }}
     {% endfor %}
+    </div>
   </section>
 </article>
 
@@ -51,18 +59,22 @@
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2016</h4>
     </div>
+    <div class="pub-container">
     {% for article in pub2016 %}
       {{ publication(article) }}
     {% endfor %}
+    </div>
   </section>
 
   <section class="py-4">
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2014</h4>
     </div>
+    <div class="pub-container">
     {% for article in pub2014 %}
       {{ publication(article) }}
     {% endfor %}
+    </div>
   </section>
 </article>
 
@@ -71,27 +83,33 @@
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2013</h4>
     </div>
+    <div class="pub-container">
     {% for article in pub2013 %}
       {{ publication(article) }}
     {% endfor %}
+  </div>
   </section>
 
   <section class="py-4">
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2012</h4>
     </div>
+    <div class="pub-container">
     {% for article in pub2012 %}
       {{ publication(article) }}
     {% endfor %}
+  </div>
   </section>
 
   <section class="py-4">
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2011</h4>
     </div>
+    <div class="pub-container">
     {% for article in pub2011 %}
       {{ publication(article) }}
     {% endfor %}
+  </div>
   </section>
 </article>
 
@@ -100,18 +118,22 @@
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2010</h4>
     </div>
+    <div class="pub-container">
     {% for article in pub2010 %}
       {{ publication(article) }}
     {% endfor %}
+  </div>
   </section>
 
   <section class="py-4">
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2009</h4>
     </div>
+    <div class="pub-container">
     {% for article in pub2009 %}
       {{ publication(article) }}
     {% endfor %}
+  </div>
   </section>
 </article>
 
@@ -120,26 +142,32 @@
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2007</h4>
     </div>
+    <div class="pub-container">
     {% for article in pub2007 %}
       {{ publication(article) }}
     {% endfor %}
+  </div>
   </section>
 
   <section class="py-4">
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2006</h4>
     </div>
+    <div class="pub-container">
     {% for article in pub2006 %}
       {{ publication(article) }}
     {% endfor %}
+  </div>
   </section>
 
   <section class="py-4">
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2005</h4>
     </div>
+    <div class="pub-container">
     {% for article in pub2005 %}
       {{ publication(article) }}
     {% endfor %}
+  </div>
   </section>
 </article>
