--- a/src/views/universal/_header.njk
+++ b/src/views/universal/_header.njk
@@ -22,6 +22,7 @@
     <link href="assets/tools/sequence/css/sequence-theme.basic.css" rel="stylesheet" media="all">
 
     <!-- site spec -->
+    <link href="assets/css/relic.css" rel="stylesheet">
     <link href="assets/css/main.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/kbl-css/style.css">
