Move images to raikou server

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -267,7 +267,7 @@ footer {
     margin-top: 30px; } }
 
 .stage-halfbol {
-  background-image: url(../img/USU_ag.jpg);
+  background-image: url(http://bioinfocore.usu.edu/raikou/image/bioinfo/USU_ag.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
