--- a/src/views/components/tool-card.njk
+++ b/src/views/components/tool-card.njk
@@ -3,7 +3,7 @@
     <div class="kbl-tool-card">
       <a href="{{ tool.link }}" target="_blank">
         <section class="thumb">
-          <img src="{{ tool.img }}">
+          <img src="{{ RaikouServer }}{{ tool.img }}">
         </section>
         <section class="px-3 py-2 title">
           <div class="w-100">
