--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -52,7 +52,7 @@
                   </div>
                   <div class="col-sm-6">
                       <figure class="samevide-figure">
-                          <img src="assets/img/doctor.jpg" style="width: 570px; height: 323px;"
+                          <img src="{{ RaikouServer }}/image/bioinfo/doctor.jpg" style="width: 570px; height: 323px;"
                               class="img-responsive img-round">
                       </figure>
                   </div>
