--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -1,82 +1,82 @@
 {% set predhpi = {
-    img: "/assets/img/tools/predHpi.PNG",
+    img: "/image/bioinfo/tools/predHpi.PNG",
     title: "PredHPI",
     link: "http://bioinfo.usu.edu/PredHPI/"
   }
 %}
 
 {% set apinet = {
-    img: "/assets/img/tools/api-net.PNG",
+    img: "/image/bioinfo/tools/api-net.PNG",
     title: "AP-iNET",
     link: "http://bioinfo.usu.edu/AP-iNET"
   }
 %}
 
 {% set plantmSubp = {
-    img: "/assets/img/tools/plantmSubp.PNG",
+    img: "/image/bioinfo/tools/plantmSubp.PNG",
     title: "Plant-mSubP",
     link: "http://bioinfo.usu.edu/Plant-mSubP"
   }
 %}
 
 {% set atSubP = {
-    img: "/assets/img/tools/atsubp.png",
+    img: "/image/bioinfo/tools/atsubp.png",
     title: "AtSubP",
     link: "http://bioinfo3.noble.org/AtSubP/"
   }
 %}
 
 {% set rslPredP = {
-    img: "/assets/img/tools/rslpred.PNG",
+    img: "/image/bioinfo/tools/rslpred.PNG",
     title: "RSLpredP",
     link: "https://webs.iiitd.edu.in/raghava/rslpred/"
   }
 %}
 
 {% set plPred = {
-    img: "/assets/img/tools/plpred.PNG",
+    img: "/image/bioinfo/tools/plpred.PNG",
     title: "PLpred",
     link: "http://bioinfo.usu.edu/PLpred"
   }
 %}
 
 {% set greeningDB = {
-    img: "/assets/img/tools/greeningdb.PNG",
+    img: "/image/bioinfo/tools/greeningdb.PNG",
     title: "GreeningDB",
     link: "http://bioinfo.usu.edu/GreeningDB/"
   }
 %}
 
 {% set citSATdb = {
-    img: "/assets/img/citSatDB.png",
+    img: "/image/bioinfo/tools/citSatDB.png",
     title: "citSATdb",
     link: "http://bioinfo.usu.edu/citSATdb/"
   }
 %}
 
 {% set legumeSSRdb = {
-    img: "/assets/img/tools/legumeSSRdb.png",
+    img: "/image/bioinfo/tools/legumeSSRdb.png",
     title: "legumeSSRdb",
     link: "http://bioinfo.usu.edu/legumeSSRdb"
   }
 %}
 
 {% set lacSubPred = {
-    img: "/assets/img/tools/lacsubpred.PNG",
+    img: "/image/bioinfo/tools/lacsubpred.PNG",
     title: "LacSubPred",
     link: "http://bioinfo.usu.edu/lacsubpred"
   }
 %}
 
 {% set ligPred = {
-    img: "/assets/img/tools/ligpred.PNG",
+    img: "/image/bioinfo/tools/ligpred.PNG",
     title: "LigPred",
     link: "http://bioinfo.usu.edu/ligpred"
   }
 %}
 
 {% set rbPred = {
-    img: "/assets/img/tools/rbpred.PNG",
+    img: "/image/bioinfo/tools/rbpred.PNG",
     title: "RBPred",
     link: "https://webs.iiitd.edu.in/raghava/rbpred/"
   }
@@ -90,28 +90,28 @@
 %}
 
 {% set necMiner = {
-    img: "/assets/kbl-img/deepnec.png",
+    img: "/image/bioinfo/tools/deepnec.png",
     title: "deepNEC",
     link: "http://bioinfo.usu.edu/deepNEC/"
   }
 %}
 
 {% set deepHPI = {
-    img: "/assets/kbl-img/deephpi.png",
+    img: "/image/bioinfo/tools/deephpi.png",
     title: "deepHPI",
     link: "http://bioinfo.usu.edu/deepHPI/"
   }
 %}
 
 {% set huco = {
-    img: "/assets/kbl-img/interactome.png",
+    img: "/image/bioinfo/tools/interactome.png",
     title: "HuCoPIA",
     link: "http://bioinfo.usu.edu/hucopia/"
   }
 %}
 
 {% set ranchSAT = {
-    img: "https://i.pinimg.com/originals/18/84/ea/1884ead71b1206cb144274463839b340.jpg",
+    img: "/image/bioinfo/tools/ranchsat.jpg",
     title: "ranchSATdb",
     link: "http://bioinfo.usu.edu/ranchSATdb/"
   }
