--- a/src/views/universal/_footer.njk
+++ b/src/views/universal/_footer.njk
@@ -7,7 +7,7 @@
         <div class="row">
           <div class="col-10">
             <a href="/">
-              <img class="img-fluid" src="assets/img/bioinfo_logoaa.png" />
+              <img class="img-fluid" src="{{ RaikouServer }}/image/bioinfo/bioinfo_logoaa.png" />
             </a>
           </div>
         </div>
