--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -118,15 +118,15 @@
 %}
 
 {% set alfaNet = {
-    img: "",
-    title: "alfaNET - Coming Soon",
-    link: "http://bioinfo.usu.edu/alfaNET/"
+    img: "/image/bioinfo/tools/alfanet.png",
+    title: "alfaNET",
+    link: "http://bioinfo.usu.edu/alfanet/"
   }
 %}
 
 {% set hpi = [predhpi, apinet, deepHPI, huco] %}
 {% set clpt = [plantmSubp, atSubP, rslPredP, plPred] %}
-{% set dbs = [greeningDB, citSATdb, legumeSSRdb, ranchSAT] %}
+{% set dbs = [greeningDB, citSATdb, legumeSSRdb, ranchSAT, alfaNet] %}
 {% set bioenergy = [lacSubPred, ligPred] %}
 {% set metagenomics = [necMiner] %}
 {% set misc = [rbPred] %}
