--- a/src/views/pages/home/video-modal.njk
+++ b/src/views/pages/home/video-modal.njk
@@ -1,6 +1,6 @@
-<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-  <div class="modal-content">
-    <div class="embed-responsive embed-responsive-16by9">
+<div class="modal-dialog modal-lg" role="document">
+  <div class="modal-content contain-vid">
+    <div class="ratio ratio-16x9">
       <iframe src="https://www.youtube.com/embed/r-Ay28WKFLY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
