add andrew, github

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -59,6 +59,7 @@ $color-facebook: #3b5998;
 $color-linkedin: #2867B2;
 $color-twitter: #1DA1F2;
 $color-soundcloud: #FE5000;
+$color-github: #333;
 
-$logo-map: ("google": $color-google, "orcid": $color-orcid, "researchgate": $color-researchgate,
+$logo-map: ("google": $color-google, "orcid": $color-orcid, "researchgate": $color-researchgate, "github": $color-github,
             "facebook": $color-facebook, "linkedin": $color-linkedin, "twitter": $color-twitter, "soundcloud": $color-soundcloud, "kbl": $color-primary);
