--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -139,6 +139,20 @@
   }
 %}
 
+{% set andrew = {
+    name: "Andrew Jouffray",
+    subtitle: "Bsc Computer Science",
+    modifier: "Jouffray",
+    type: "Ungraduate",
+    bio: "Andrew Jouffray is a computer science student and software developer. He currently works on developing a method to create datasets for deep learning image recognition tasks, enabling robots to generate their own training data.",
+    email: "andrew.d.jouffray@gmail.com",
+    img: "asfh",
+    social: [
+      {type: 'github', link: 'https://github.com/andrewjouffray'}
+    ]
+  }
+%}
+
 {% set template = {
     name: "Rousselene",
     subtitle: "Bioinformatics",
