--- a/src/views/components/person-card.njk
+++ b/src/views/components/person-card.njk
@@ -83,6 +83,8 @@
   {% elif social.type === "website" %}
     <a href="{{ social.link }}" target="_blank" rel="noreferrer noopener" class="kbl-icon-kbl correct-fa align-middle"><i class="fas fa-laptop"></i></a>
   {% elif social.type === "soundcloud" %}
-  <a href="{{ social.link }}" target="_blank" rel="noreferrer noopener" class="kbl-icon-{{ social.type }} correct-fa align-middle"><i class="fab fa-soundcloud"></i></a>
+    <a href="{{ social.link }}" target="_blank" rel="noreferrer noopener" class="kbl-icon-{{ social.type }} correct-fa align-middle"><i class="fab fa-soundcloud"></i></a>
+  {% elif social.type === 'github' %}
+    <a href="{{ social.link }}" target="_blank" rel="noreferrer noopener" class="kbl-icon-{{ social.type }} correct-fa align-middle"><i class="fab fa-github"></i></a>
   {% endif %}
 {% endmacro %}
