add andrew again

--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -122,7 +122,8 @@
     img: "/image/raw/bioinfo/profile/shelby.jpg",
     social: [
       {type: "website", link: "https://shelbymccowan.com"},
-      {type: "linkedin", link: "https://www.linkedin.com/in/shelby-mccowan-44718a166/"}
+      {type: "linkedin", link: "https://www.linkedin.com/in/shelby-mccowan-44718a166/"},
+      {type: 'github', link: 'https://github.com/MusicDev33'}
     ]
   }
 %}
@@ -146,7 +147,7 @@
     type: "Ungraduate",
     bio: "Andrew Jouffray is a computer science student and software developer. He currently works on developing a method to create datasets for deep learning image recognition tasks, enabling robots to generate their own training data.",
     email: "andrew.d.jouffray@gmail.com",
-    img: "asfh",
+    img: "http://bioinfocore.usu.edu/raikou/image/people/ajouffray/profile.jpg",
     social: [
       {type: 'github', link: 'https://github.com/andrewjouffray'}
     ]
@@ -222,5 +223,5 @@
 
 {% set bioinfoStaff = [roussie] %}
 {% set gradStudents = [naveen, raghav, david] %}
-{% set undergradStudents = [shelby, kolton] %}
+{% set undergradStudents = [shelby, kolton, andrew] %}
 {% set alumni = [caleb, cristian, kaige, matt, nikhil, raul, suyash, udarika] %}
