--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -147,7 +147,7 @@
     type: "Ungraduate",
     bio: "Andrew Jouffray is a computer science student and software developer. He currently works on developing a method to create datasets for deep learning image recognition tasks, enabling robots to generate their own training data.",
     email: "andrew.d.jouffray@gmail.com",
-    img: "http://bioinfocore.usu.edu/raikou/image/people/ajouffray/profile.jpg",
+    img: "/image/people/ajouffray/profile.jpg",
     social: [
       {type: 'github', link: 'https://github.com/andrewjouffray'}
     ]
