--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -142,7 +142,7 @@
 
 {% set andrew = {
     name: "Andrew Jouffray",
-    subtitle: "Bsc Computer Science",
+    subtitle: "BSc Computer Science",
     modifier: "Jouffray",
     type: "Ungraduate",
     bio: "Andrew Jouffray is a computer science student and software developer. He currently works on developing a method to create datasets for deep learning image recognition tasks, enabling robots to generate their own training data.",
